# UniversalRobotUHL2

ur5_e_moveit_config/: CMakeLists.txt  package.xml
ur5_e_moveit_config/config/: controllers.yaml  kinematics.yaml  ros_controllers.yaml
ur5_e_moveit_config/launch/: COPY_ur5_e_moveit_planning_execution_isak.launch  move_group.launch  moveit_rviz.launch.custom  ur5_e_moveit_planning_execution.launch
ur5_e_moveit_config/msg/: MyMsg.msg
ur5_e_moveit_config/srv/: MoverServiceUr5e.srv
ur5_e_moveit_config/tests/: moveit_commander_test  mover.py  sim_real_pnp.py  statePublisherTest.py  trajectory_subscriber_ur5e.py
ur_description/config/ur5e/: default_kinematics.yaml  default_kinematics.yaml.bak  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
ur_msgs/: CMakeLists.txt  package.xml
ur_msgs/srv/: SetPayload.srv
